@@ -1,7 +1,11 @@
 Package triangulation: provides triangulations Delaunay triangulations, 
 constrained and regular triangulations with  tests and examples.
 
-- fixed overloaded insert and locate of Triangulation_hiererachy_2
+- remove the virtual charactwer of insert in Constrained_triangulation
+  Constrained_Delaunay_triangulation_2 and Constrained_triangulation_plus_2.
+  There are now virtual versions of those functions with a different name:
+  virtual_insert()
+- fixed overloaded insert and locate of Triangulation_hierarachy_2
 - remove depraated files in the doc 
   Triangulation_2_ref/Triangulation_face_2.tex
   and Triangulation_2_ref/Triangulation_vertex_2.tex
